--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&display=swap"
     rel="stylesheet">
-  <title>Loopdrill</title>
+  <title>Loopdrill Pvt. Ltd. : Empowering Your Digital Future</title>
+
 </head>
 
 <body>
