added meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-
+  <meta name="description"
+    content="Discover comprehensive website solutions with Loopdrill. From expert web development and innovative app development to effective digital marketing strategies, we empower businesses to thrive online. Explore our services today.">
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" charset="UTF-8"
